# Soda

./: .gitignore  .gitmodules  Build.bat  CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  Cotton_Game_Engine.sln  LICENSE  README.md  SodaEngine.sln  imgui.ini  premake5.lua
CottonBox/: CottonBox.vcxproj  CottonBox.vcxproj.filters
CottonBox/src/: Box.cpp  Playground.cpp
CottonEngine/: CottonEngine.vcxproj  CottonEngine.vcxproj.filters
CottonEngine/src/: CE.h
CottonEngine/src/CottonEngine/: App.cpp  App.h  Core.h  Logger.cpp  Logger.h  Start.h
Soda/: Soda.vcxproj  Soda.vcxproj.filters
Soda/src/: SD_PCH.cpp  SD_PCH.h  Soda.h
Soda/src/PlatformSrc/: WinWindow.cpp  WinWindow.h  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Soda/src/PlatformSrc/OpenGL/: imgui_impl_opengl3.cpp
Soda/src/Soda/: App.cpp  App.h  Camera.cpp  Camera.h  Core.h  Input.h  LayerStack.cpp  LayerStack.h  Layers.cpp  Layers.h  Light.cpp  Light.h  Logger.cpp  Logger.h  OrthoCameraController.cpp  OrthoCameraController.h  Start.h  Window.h
Soda/src/Soda/Events/: AppEvents.h  Events.h  KeyboardEvents.h  MouseEvents.h
Soda/src/Soda/Input/: Input.h  KeyboardCodes.h  MouseCodes.h
Soda/src/Soda/Renderer/: Bufferer.cpp  Bufferer.h  Camera.h  Framebuffer.h  Render.cpp  Render.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.h  RenderContext.h  Renderer2D.cpp  Renderer2D.h  Shaderer.cpp  Shaderer.h  Texture.cpp  Texture.h  Timestep.h  VertexArray.cpp  VertexArray.h
Soda/src/Soda/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLBuffers.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Soda/src/Soda/Tools/: Logger.h
Soda/src/Soda/Tools/Debug/: Profiler.cpp
Soda/src/Soda/_Main/: App.cpp  App.h  Core.h  Layers.h  Window.h
Soda/src/Soda/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
Soda/submodules/glad/: premake5.lua
Soda/submodules/stb_image/: stb_image.cpp
SodaCan/: AppUpdate_Profiler.json  CMakeLists.txt  SodaCan.vcxproj  imgui.ini
SodaCan/assets/shaders/: Shader.glsl  Shader2D.glsl
SodaCan/src/: AppLayer.cpp  AppLayer.h  GameLayers.cpp  GameLayers.h  Playground.cpp  SodaCan.cpp  SodaCan2D.cpp  SodaCan2D.h  imgui.ini
SodaCan/src/GUI/: SodaGui.cpp  SodaGui.h
SodaCan/src/Panels/: ObjectDetailsPanel.cpp  ObjectDetailsPanel.h  Panels.cpp  Panels.h  SceneListPanel.cpp  SceneListPanel.h
SodaEngine/: CMakeLists.txt
SodaEngine/src/: SD_PCH.h  Soda.h
SodaEngine/src/PlatformSrc/: GLFWInput.cpp  GLFWWindow.cpp  WindowsInput.cpp
SodaEngine/src/Soda/: Light.cpp  OrthoCameraController.cpp
SodaEngine/src/Soda/ECS/: CameraSystem.cpp  CameraSystem.h  Components.h  Object.cpp  Object.h  ScriptEntity.h  Systems.cpp  Systems.h
SodaEngine/src/Soda/Events/: MouseEvents.h
SodaEngine/src/Soda/GameAssets/: Object2D.h  OrthoCameraController.cpp  OrthoCameraController.h
SodaEngine/src/Soda/Input/: Input.h  KeyboardCodes.h
SodaEngine/src/Soda/Renderer/: Bufferer.cpp  Bufferer.h  Camera.cpp  CameraComponent.h  Framebuffer.cpp  Framebuffer.h  RenderCommand.cpp  Renderer2D.cpp  Renderer2D.h  Texture.h
SodaEngine/src/Soda/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
SodaEngine/src/Soda/Tools/: SpriteSheet.cpp  SpriteSheet.h
SodaEngine/src/Soda/Tools/Debug/: Profiler.h
SodaEngine/src/Soda/_Main/: App.cpp  App.h  Core.h  LayerStack.cpp  Layers.h  Start.h  Window.h
SodaEngine/src/Soda/imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  imgui_impl_opengl3.cpp
SodaEngine/submodules/glad/: CMakeLists.txt  premake5.lua
SodaEngine/submodules/glad/include/glad/: glad.h
SodaEngine/submodules/glad/src/: glad.c
SodaEngine/submodules/stb_image/: stb_image.h
TestingGrounds/: imgui.ini
TestingGrounds/assets/shaders/: Shader.glsl  Texture.glsl
TestingGrounds/src/: 2DGround.cpp  2DGround.h  Playground.cpp  SodaCan2D.cpp  SodaCan2D.h
bin-objs/Debug-windows-x86_64/Soda/: Soda.dll.recipe  vc143.idb
bin-objs/Debug-windows-x86_64/Soda/Soda.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Soda.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
bin-objs/Debug-windows-x86_64/SodaCan/: SodaCan.exe.recipe  vc143.idb
bin-objs/Debug-windows-x86_64/SodaCan/SodaCan.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
scripts/: build.bat  build.sh
